@@ -77,8 +77,15 @@
 # -----------------------------------------------------------------------------
 # Base variables needed by all makefiles.
 # -----------------------------------------------------------------------------
+MAJOR_VERSION=          @MAJOR_VERSION@
+MINOR_VERSION=          @MINOR_VERSION@
+MICRO_VERSION=          @MICRO_VERSION@
+
+VERSION_DOT=            @VERSION_DOT@
+VERSION_UNDERSCORE=     @VERSION_UNDERSCORE@
+
 mtreedir=		$(topdir)/mtree
-projdatadir=		$(datadir)/sonix
+projdatadir=		$(datadir)/@DATA_VERSION@
 releasedir=		$(JUGGLERROOT_ABS)/release
 scriptdir=		$(releasedir)/scripts
 topdir=			@topdir@
@@ -98,6 +105,7 @@ RM_LN=			@RM_LN@
 WARNS=			2
 ROOT_ABS=		@projectdir@
 JUGGLERROOT_ABS=	@JUGGLERROOT_ABS@
+SNX_SHARE_DIR=          @SNX_SHARE_DIR@
 
 STATICLIB_EXT=          @STATICLIB_EXT@
 DYNAMICLIB_EXT=         @DYNAMICLIB_EXT@
@@ -107,7 +115,8 @@ DYNAMICLIB_EXT=         @DYNAMICLIB_EXT@
 # -----------------------------------------------------------------------------
 EXTRA_CFLAGS=		$(CFLAGS_DYNLIB)
 EXTRA_CXXFLAGS=		$(CXXFLAGS_DYNLIB)
-EXTRA_DEFS=		-D_SNX_BUILD_
+EXTRA_DEFS=		-DSNX_ROOT_DIR="\"$(instprefix)\""     \
+                        -DSNX_SHARE_DIR="\"$(SNX_SHARE_DIR)\"" -D_SNX_BUILD_
 EXTRA_DEPEND_FLAGS=	-I$(ROOT_ABS)
 EXTRA_INCLUDES=		-I$(top_srcdir)
 EXTRA_LDFLAGS=		@EXTRA_LDFLAGS@
