@@ -40,9 +40,11 @@
 /set type=dir mode=@DIR_PERMS@ uname=@OWNER_NAME@ gname=@GROUP_NAME@
 .
     include
+      @HEADER_VERSION@
         snx
             Util
             ..
         ..
+      @CLOSE_HEADER_VERSION@
     ..
 ..
